--- a/assets/css/Footer-Basic.css
+++ b/assets/css/Footer-Basic.css
@@ -41,7 +41,7 @@
   display: inline-block;
   text-align: center;
   border-radius: 50%;
-  border: 1px solid #ccc;
+  border: 1px solid #78797a;
   margin: 0 8px;
   color: inherit;
   opacity: 0.75;
